--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "recharts": "^2.12.7",
     "tailwindcss": "^3.4.1",
     "vite": "^7.1.6",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8",
     "@supabase/supabase-js": "^2.57.4"
   },
